test/langtools/tools/javac/annotations/typeAnnotations/failures/AnnotatedMethodSelectorTest2.out
AnnotatedMethodSelectorTest2.java:16:42: compiler.err.annotation.type.not.applicable.to.type: AnnotatedMethodSelectorTest2.A
AnnotatedMethodSelectorTest2.java:17:23: compiler.err.annotation.type.not.applicable.to.type: AnnotatedMethodSelectorTest2.A
2 errors
